--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -26,10 +26,11 @@
                 list="med-suggestions"
                 autocomplete="off"
             />
-            <datalist id="med-suggestions">
-                <!-- dynamically filled -->
-            </datalist>
-            
+
+            <!-- Custom suggestion box -->
+            <ul id="suggestions-box" class="suggestions-box"></ul>
+
+
             <button type="submit" id="submit-btn">Submit</button>
         </form>
 
