--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -38,7 +38,9 @@
         <div id="feedback" style="color: #999; font-size: 0.9em;"></div>
 
         <!-- List of selected medications -->
-        <ul id="med-list" class="med-list"></ul>
+        <div class="med-list-container">
+            <ul class="med-list" id="med-list"></ul>
+        </div>
 
         <!-- Hidden input to store the selected medications (for form submission) -->
         <input type="hidden" name="meds" id="hidden-meds" form="med-form" />
