--- a/webapp/templates/interaction-results.html
+++ b/webapp/templates/interaction-results.html
@@ -9,34 +9,34 @@
         <div class="med-result-container">
             <h2>Selected Medications</h2>
             <ul class="med-result-list">
-                {% for d in drugs %}
+                {% for d in druginfo.keys() %}
                     <p>{{ d.name }}</p>
                 {% endfor %}
             </ul>
         </div>
         <div class="interaction-result-panel">
             <h2>Potential Risks</h2>
-            {% if len(label_warnings) > 0 %}
+            {% if druginfo %}
                 <div class="label-warning-container">
                     <h3>Label Warnings</h3>
                     <ul class="label-warning-list">
-                        {% for drugname, warning in label_warnings.items() %}
+                        {% for drugname, warning in druginfo.items() %}
                             <p><b>{{ drugname }}:</b> {{ warning }}</p>
                         {% endfor %}
                     </ul>
                 </div>
             {% endif %}
-            {% if len(events_summary) > 0 %}
+            {% if events_summary %}
                 <div class="events-result-container">
                     <h3>Adverse Events Summary</h3>
-                    <ul class="events-result-list">
-                        {% for line in events_summary %}
-                            <p>line</p>
-                        {% endfor %}
+                    <ul class="events-result-summary">
+                        <p>{{ num_reports }} adverse events have been reported with one at least two of the selected medications listed.</p>
+                        <p>{{ risk }}% of these reports indicated at least of of the selected medications as the most likely cause.</p>
+                        <p>{{ seriousness }}% of reports with likely cause resulted in serious reactions.</p>
                     </ul>
                     <h3>Most Common Reported Reactions</h3>
                     <ul class="reactions-result-list">
-                        {% for reaction, freq in reactions %}
+                        {% for reaction, freq in reaction_summary %}
                             <p>{{ reaction }} ({{ freq }} reports)</p>
                         {% endfor %}
                     </ul>
