--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 
     <!-- Font Awesome for icons -->
@@ -23,9 +23,6 @@
         <nav role="navigation">
             <span style="float: left">
                 <a href="/">Medication Interaction Checker</a>
-            </span>
-            <span style="float: right">
-                <a href="/disclaimer/">disclaimer</a>
             </span>
         </nav>
     </header>
